tests/NormalTests/paczka1/fuzzy1/57345042.err
Error in line 3: PvFvn85z8m S645 48,5
Error in line 9: PvFvn85z8m A632 52,28
Error in line 1: LvH2 A632 88,7
Error in line 12: LvH2 S645 78,5
Error in line 19: A110 A110 52,4
Error in line 11: PvFvn85z8m A110 75,5
Error in line 33: rPbjqb4oVA A110 128,5
Error in line 28: wc1ZbCd3Dj A110 70,9
